--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -47,3 +47,10 @@
       margin-right: auto
   .crd_hover_txt--body > *
     color: #FFFFFF
+
+
+.tema4
+  .cajon-custom.color-secundario
+    background-color: $color-secundario
+    p
+      color: #FFFFFF
