--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -54,3 +54,6 @@
     background-color: $color-secundario
     p
       color: #FFFFFF
+      
+.tarjeta.tarjeta--gris-2
+  background-color: #ECE3FF
